--- a/src/Makefile
+++ b/src/Makefile
@@ -97,7 +97,7 @@ ifeq ($(ARCH), $(filter $(ARCH), \
                  x86-64-vnni512 x86-64-vnni256 x86-64-avx512 x86-64-bmi2 x86-64-avx2 \
                  x86-64-sse41-popcnt x86-64-modern x86-64-ssse3 x86-64-sse3-popcnt \
                  x86-64 x86-32-sse41-popcnt x86-32-sse2 x86-32 ppc-64 ppc-32 \
-                 e2k e2k-v3 e2k-v4 e2k-v5 e2k-v6 \
+                 e2k \
                  armv7 armv7-neon armv8 apple-silicon general-64 general-32))
    SUPPORTED_ARCH=true
 else
@@ -294,16 +294,13 @@ endif
 
 ifeq ($(findstring e2k,$(ARCH)),e2k)
 	arch = e2k
+	mmx = yes
 	bits = 64
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	popcnt = yes
-
-ifeq ($(findstring -v5,$(ARCH)),-v5)
 	sse41 = yes
-endif
-
+	popcnt = yes
 endif
 
 endif
@@ -485,11 +482,7 @@ endif
 ### 3.3 Optimization
 ifeq ($(optimize),yes)
 
-	ifeq ($(findstring e2k,$(ARCH)),e2k)
-		CXXFLAGS += -O4
-	else
-		CXXFLAGS += -O3
-	endif
+	CXXFLAGS += -O3
 
 	ifeq ($(comp),gcc)
 		ifeq ($(OS), Android)
@@ -530,24 +523,6 @@ ifeq ($(popcnt),yes)
 		CXXFLAGS += -msse3 -DUSE_POPCNT
 	else
 		CXXFLAGS += -msse3 -mpopcnt -DUSE_POPCNT
-	endif
-endif
-
-ifeq ($(findstring e2k,$(ARCH)),e2k)
-	ifeq ($(findstring -v3,$(ARCH)),-v3)
-		CXXFLAGS += -march=elbrus-v3
-	endif
-
-	ifeq ($(findstring -v4,$(ARCH)),-v4)
-		CXXFLAGS += -march=elbrus-v4
-	endif
-
-	ifeq ($(findstring -v5,$(ARCH)),-v5)
-		CXXFLAGS += -march=elbrus-v5
-	endif
-
-	ifeq ($(findstring -v6,$(ARCH)),-v6)
-		CXXFLAGS += -march=elbrus-v6
 	endif
 endif
 
@@ -718,11 +693,7 @@ help:
 	@echo "armv7                   > ARMv7 32-bit"
 	@echo "armv7-neon              > ARMv7 32-bit with popcnt and neon"
 	@echo "armv8                   > ARMv8 64-bit with popcnt and neon"
-	@echo "e2k                     > Elbrus 2000 generic"
-	@echo "e2k-v3                  > Elbrus 2000 version 3"
-	@echo "e2k-v4                  > Elbrus 2000 version 4"
-	@echo "e2k-v5                  > Elbrus 2000 version 5"
-	@echo "e2k-v6                  > Elbrus 2000 version 6"
+	@echo "e2k                     > Elbrus 2000"
 	@echo "apple-silicon           > Apple silicon ARM64"
 	@echo "general-64              > unspecified 64-bit"
 	@echo "general-32              > unspecified 32-bit"
@@ -870,7 +841,7 @@ config-sanity: net
 	@test "$(SUPPORTED_ARCH)" = "true"
 	@test "$(arch)" = "any" || test "$(arch)" = "x86_64" || test "$(arch)" = "i386" || \
 	 test "$(arch)" = "ppc64" || test "$(arch)" = "ppc" || \
-	 test "$(arch)" = "e2k" || test "$(arch)" = "e2k-v3" || test "$(arch)" = "e2k-v4" || test "$(arch)" = "e2k-v5" || test "$(arch)" = "e2k-v6" || \
+	 test "$(arch)" = "e2k" || \
 	 test "$(arch)" = "armv7" || test "$(arch)" = "armv8" || test "$(arch)" = "arm64"
 	@test "$(bits)" = "32" || test "$(bits)" = "64"
 	@test "$(prefetch)" = "yes" || test "$(prefetch)" = "no"
